--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,13 +6,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Set up Go
-        uses: actions/setup-go@v3
+        uses: actions/setup-go@v4
         with:
-          go-version: 1.19
+          go-version: '1.20'
       - name: Install Protoc
         run: |
           sudo apt install -y protobuf-compiler
-          go install google.golang.org/protobuf/cmd/protoc-gen-go@v1.28
+          go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
       - name: Test
         run: make test
       - name: Build
