--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,14 +4,17 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
           go-version: '1.20'
       - name: Install Protoc
         run: |
-          sudo apt install -y protobuf-compiler
+          curl -LO https://github.com/protocolbuffers/protobuf/releases/download/v28.1/protoc-28.1-linux-x86_64.zip
+          unzip protoc-28.1-linux-x86_64.zip -d $HOME/.local
+          export PATH="$PATH:$HOME/.local/bin"
+          protoc --version
           go install google.golang.org/protobuf/cmd/protoc-gen-go@latest
       - name: Test
         run: make test
